--- a/DAY1/input.html
+++ b/DAY1/input.html
@@ -67,6 +67,70 @@
                 <input type="date" id="birthday" name="birthday">
             </td>
         </tr>
+        <tr>
+            <td>Email</td>
+            <td>
+                <label for="Email">Enter your email:</label>
+                <input type="email" id="email" name="email">
+            </td>
+        </tr>
+        <tr>
+            <td>Image</td>
+            <td>
+                <input type="image" src="img_submit.gif" alt="submit" width="48" height="48">
+            </td>
+        </tr>
+        <tr>
+            <td>File</td>
+            <td>
+                <label for="myfile">Select a file:</label>
+                <input type="file" id="myfile" name="myfile">
+            </td>
+            </tr>
+            <tr>
+                <td>Hidden</td>
+                <td>
+                    <label for="fname">First name:</label>
+                    <input type="text" name="" id="fname" name="fame"><br><br>
+                    <input type="hidden" id="cusId" name="cusId" value="3487">
+                    <input type="submit" value="submit">
+                </td>
+            </tr>
+            <tr>
+                <td>Month</td>
+                <td>
+                    <label for="bdaymonth">Birthday(month anf year):</label>
+                    <input type="month" id="bdaymonth" name="bdaymonth">
+                </td>
+            </tr>
+           <tr>
+            <td>Number</td>
+            <td>
+                <label for="quantity">Quantity(between 1 and 5):</label>
+                <input type="number" id="quantity" name="quantity" min="1" max="5">
+            </td>
+           </tr>
+           <tr>
+            <td>Range</td>
+            <td>
+                <label for="vol">volume(between 0 and 50):</label>
+                <input type="range" id="vol" name="vol" min="0" max="50">
+            </td>
+           </tr>
+           <tr>
+            <td>Search</td>
+            <td>
+                <label for="gsearch">Search Google:</label>
+                <input type="search" name="gsearch" id="gsearch">
+            </td>
+           </tr>
+           <tr>
+            <td>Tel</td>
+            <td>
+                <label for="phone">Enter your phone number:</label>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0_9]{2}-[0-9]{3}">
+            </td>
+           </tr>
     </table>
     
 </body>
